Add roll button with toy physics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="hud">
         <h1>D6 Dice</h1>
         <p>Drag to rotate (touch/mouse). Double‑tap to reset.</p>
+        <button id="rollBtn" type="button">Roll</button>
       </div>
       <canvas id="c"></canvas>
     </div>
