--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>D6 Dice</h1>
         <p>Drag to rotate (touch/mouse). Double‑tap to reset.</p>
         <button id="rollBtn" type="button">Roll</button>
+        <div id="result" style="margin-top:8px;font-size:12px;opacity:.9">Result: —</div>
       </div>
       <canvas id="c"></canvas>
     </div>
